--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,13 +1,15 @@
 <header class="main-header d-flex flex-column flex-md-row align-items-center justify-content-between p-3 shadow-sm bg-light">
 <img src="assets/logo.png" alt="Logo Armazém" class="logo">
 
-
   <app-pesquisa class="mb-2 mb-md-0 w-100 w-md-auto"></app-pesquisa>
 
   <nav class="nav-menu d-flex gap-3">
     <a href="vitrine" class="nav-link">Catálogo</a>
     <a href="login" class="nav-link">Cadastro</a>
     <a href="cesta" class="nav-link">Carrinho</a>
+    <a href="contato/" class="nav-link">Contato</a>
+    <a href="historico/" class="nav-link">Meus Pedidos</a>
+
   </nav>
 </header>
 
