--- a/Frontend/src/app/pesquisa/pesquisa.component.html
+++ b/Frontend/src/app/pesquisa/pesquisa.component.html
@@ -1,10 +1,13 @@
-<div class="input-group mb-4 pesquisa-box">
-  <input
-    type="text"
-    [(ngModel)]="filtro"
-    class="form-control"
-    placeholder="Informe o que deseja buscar"
-  />
-  <button class="btn btn-primary" (click)="fazerBusca()">OK</button>
-  <button class="btn btn-secondary" (click)="limparBusca()">Limpar</button>
+<div class="input-group">
+
+  <input type="text" class="form-control" placeholder="Informe o que deseja buscar" aria-label="Caixa de busca">
+
+  <button class="btn btn-outline-secondary" type="button" id="button-addon-search">
+    <i class="bi bi-search"></i>
+  </button>
+
+  <button class="btn btn-outline-danger" type="button" id="button-addon-clear">
+    <i class="bi bi-x-lg"></i>
+  </button>
+
 </div>
